--- a/Dockerfile.tmpl
+++ b/Dockerfile.tmpl
@@ -3,12 +3,7 @@ FROM public.ecr.aws/lambda/provided:%%VER%% AS build-env
 RUN yum -q -y install curl unzip && \
         rm -fr /var/cache/yum/* && \
         yum -q clean all
-
-# RUN apt-get -qq -y update && \
-# 	apt-get -qq -y --no-install-recommends install curl ca-certificates tzdata unzip && \
-# 	apt-get clean && \
-# 	rm -rf /var/cache/apt/archives/* /var/lib/apt/lists/*
-# RUN rm -f /etc/localtime; ln -sf /usr/share/zoneinfo/Asia/Tokyo /etc/localtime
+RUN ln -sf /usr/share/zoneinfo/Asia/Tokyo /etc/localtime
 
 RUN curl -s "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip" && \
 	unzip -q awscliv2.zip && \
@@ -16,12 +11,11 @@ RUN curl -s "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscl
 
 FROM public.ecr.aws/lambda/provided:%%VER%%
 
-# RUN apt-get -qq -y update && \
-# 	apt-get -qq -y --no-install-recommends install jq && \
-# 	apt-get clean && \
-# 	rm -rf /var/cache/apt/archives/* /var/lib/apt/lists/*
+RUN yum -q -y install jq && \
+        rm -fr /var/cache/yum/* && \
+        yum -q clean all
+RUN ln -sf /usr/share/zoneinfo/Asia/Tokyo /etc/localtime
 
-# COPY --from=build-env /etc/localtime /etc/localtime
 COPY --from=build-env /usr/local/aws-cli /usr/local/aws-cli
 RUN ln -s /usr/local/aws-cli/v2/current/bin/aws /usr/local/bin/aws && \
 	ln -s /usr/local/aws-cli/v2/current/bin/aws_completer /usr/local/bin/aws_completer
